--- a/tmux.conf
+++ b/tmux.conf
@@ -1,40 +1,66 @@
-# remap prefix from 'C-b' to 'C-a'
+set -g default-terminal "screen-256color"
+set -ga terminal-overrides ",*256col*:Tc"
+
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
-# split panes using | and -
+set -g base-index 1
+setw -g pane-base-index 1
+
 bind \' split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 unbind '"'
 unbind %
 
-# reload config file (change file location to your the tmux.conf you want to use)
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.tmux.conf \; display "Config reloaded!"
+
+set-option -g mouse on
+
+set-option -g allow-rename off
+
+set-option -g history-limit 50000
+
+set -sg escape-time 0
+
+set -g focus-events on
+
+bind -n C-k send-keys -R \; clear-history
+bind-key C-l send-keys 'C-l'  # Allow clearing screen with prefix-Ctrl-l
+bind-key | split-window -h -c "#{pane_current_path}"  # Alternative split
+
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
+
 
 set -g status-position bottom
 set -g status-bg colour234
 set -g status-fg colour137
-set -g status-left ''
+
+set -g status-left '#[fg=colour233,bg=colour245,bold] [#S] '
 set -g status-right '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M '
 set -g status-right-length 50
-set -g status-left-length 20
 
-# Enable mouse control (clickable windows, panes, resizable panes)
-set-option -g mouse on
-
-# don't rename windows automatically
-set-option -g allow-rename off
-
-bind -n C-k send-keys -R \; clear-history
+set -g status-left-length 30
 
 setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
 setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
 
-set-option -g history-limit 5000
-
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-urlview'
+set -g @plugin 'tmux-plugins/tmux-resurrect'    # Persist tmux sessions after restart
+set -g @plugin 'tmux-plugins/tmux-continuum'    # Auto-save sessions every 15 minutes
+set -g @plugin 'tmux-plugins/tmux-yank'         # Better copy/paste
+set -g @plugin 'tmux-plugins/tmux-pain-control' # Better pane management
+
+set -g @continuum-restore 'on'
+set -g @resurrect-capture-pane-contents 'on'
 
 run '~/.tmux/plugins/tpm/tpm'
-
